# ElectroCore

./: .env.sample  README.md  pyproject.toml
chain/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
chain/migrations/: 0001_initial.py  0002_alter_chain_contact_alter_chain_product.py  0003_alter_chain_contact_alter_chain_product_and_more.py  0004_alter_chain_contact_alter_chain_product_and_more.py
config/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
